--- a/JavaScript/index.html
+++ b/JavaScript/index.html
@@ -8,6 +8,6 @@
     <p>javascript</p>
 </head>
 <body>
-    <script src="edad.js"></script>
+    <script src="BuscarNumero.js"></script>
 </body>
 </html>
